(WIP) Api path /product/history (ProductHistory)
