# app/Router/RouterFactory.php
@@ -16,6 +16,7 @@ final class RouterFactory
         $router = new RouteList;
         $router->addRoute('v1/product', 'Product:default');
         $router->addRoute('v1/products', 'ProductList:default');
+        $router->addRoute('v1/product/history', 'ProductHistory:default');
         // $router->addRoute('v1/<presenter>/<action>[/<id>]', 'Default:default');
         return $router;
     }
